--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "svgtk",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "SVG Toolkit",
   "author": "Kazuhiko Arase",
+  "license": "MIT",
   "main": "src/svgtk.js",
   "repository": {
     "type": "git",
@@ -14,7 +15,15 @@
   "keywords": [
     "SVG"
   ],
-  "license": "MIT",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
+    "@types/node": "^24.0.6",
+    "typescript": "~5.8.3",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
